--- a/lab09/src/main/webapp/error.html
+++ b/lab09/src/main/webapp/error.html
@@ -8,9 +8,9 @@
 <body>
 <h1>Form login</h1>
 
-<div>
-    ${errormessage}
-</div>
+    <div>
+        Неверный логин или пароль, повторите ввод!
+    </div>
 
     <form action="/lab08/login" method="post">
         <!-- <input> send params -->
