--- a/lab11/src/main/webapp/index.html
+++ b/lab11/src/main/webapp/index.html
@@ -4,15 +4,13 @@
 <head>
     <title>Lab 08</title>
     <meta charset="utf-8"/>
+    <link rel="shortcut icon"
+          href="/lab08/favicon.ico">
 </head>
 <body>
 <h1>Form login</h1>
 
-    <div>
-        Неверный логин или пароль, повторите ввод!
-    </div>
-
-    <form action="/lab08/login" method="post">
+    <form action="#" method="post">
         <!-- <input> send params -->
         <div>
             Login:<input type="text" name="login">
